# FastAPI-contacts

./: alembic.ini  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migration/: env.py
migration/versions/: 808f25d949aa_init.py  92a427875c4a_init.py
migrations/: env.py
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
