[tool.poetry]
name = "contacts-app"
version = "0.1.0"
description = ""
authors = ["Evgenius87 <plotnikov.evgenij@ukr.net>"]
readme = "README.md"
packages = [{include = "contacts_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.17"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^1.10.9"}
fastapi-mail = "^1.3.1"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
sphinx = "^7.0.1"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]